cluster/core/storage/longhorn/patch-longhorn-csi-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-csi-plugin
  namespace: storage
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
